--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
     "autoprefixer": "10.4.17",
+    "country-state-city": "^3.2.1",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "next": "14.1.0",
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.8.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   }
