--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@tremor/react": "^3.14.0",
     "@types/node": "20.11.19",
     "@types/react": "18.2.55",
@@ -17,6 +18,7 @@
     "country-state-city": "^3.2.1",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
+    "heroicons": "^2.1.1",
     "next": "14.1.0",
     "postcss": "8.4.35",
     "react": "18.2.0",
