--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.6",
     "@heroicons/react": "^1.0.6",
     "@tremor/react": "^3.14.0",
     "@types/node": "20.11.19",
@@ -18,6 +19,7 @@
     "country-state-city": "^3.2.1",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
+    "graphql": "^16.8.1",
     "heroicons": "^2.1.1",
     "next": "14.1.0",
     "postcss": "8.4.35",
